[fix] - menu opening on Safari

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -52,7 +52,6 @@ header{
   width: 100%;
   height: 80px;
   float: left;
-  overflow:hidden;
   top:0;
   z-index:100;
   box-shadow:0 0 15px #d6d7da;
@@ -213,6 +212,8 @@ header{
   @include transition(all 0.8s ease);
   z-index:10;
   padding:0 0 20px 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 
   li{
     overflow:hidden;
